--- a/style.css
+++ b/style.css
@@ -15,9 +15,8 @@ body {
 }
 
 .paper {
-  background-image: url("https://i0.wp.com/textures.world/wp-content/uploads/2018/10/2-Millimeter-Paper-Background-copy.jpg?ssl=1");
+  background-image: url("images/polaroid.png");
   background-size: 500px;
-  background-position: center center;
   padding: 20px 100px;
 /*  min-width: 800px; */
   
@@ -38,6 +37,7 @@ body {
 
 .paper.image {
   padding: 10px;
+  
 }
 .paper.image p {
   font-size: 30px;
@@ -47,6 +47,8 @@ img {
   max-height: 200px;
   width: 100%;
   user-select: none;
+  box-shadow:  1px 1px 4px 3px rgba(0, 0, 0, 0.5);
+  
 }
 
 .paper.heart::after {
